Fix fade in and out and visibility when reached summary

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 html,
 body {
     min-height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -162,7 +163,7 @@ rect {
 
 #flight-phase {
     position: absolute;
-    height: 5000px;
+    height: 4200px;
 }
 
 #flight-phase svg {
@@ -177,4 +178,9 @@ rect {
 #flight-scroll .scroll-stop {
     width: 1300px;
     height: 500px;
+}
+
+#flight-scroll .scroll-stop:last-child {
+    width: 1300px;
+    height: 10px;
 }
